--- a/views/contact.html
+++ b/views/contact.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
-    <title>About Page</title>
+    <title>Contact</title>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         <a class="nav-link active" href="/contact">Contact</a>
         <a class="nav-link active" href="/list">List</a>
     </nav>
-    <h1>This is the About page</h1>
+    <h1>This is the contact page</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
 
