--- a/views/index.html
+++ b/views/index.html
@@ -5,10 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+
     <title>Homepage</title>
 </head>
 
 <body>
+    <nav class="nav">
+        <a class="nav-link active" href="/">Home</a>
+        <a class="nav-link active" href="/about">About</a>
+        <a class="nav-link active" href="/contact">Contact</a>
+        <a class="nav-link active" href="/list">List</a>
+    </nav>
+
     <h1>This is the homepage</h1>
     <p>
         <ul>
@@ -18,6 +28,9 @@
             <li>HOMEPAGE</li>
         </ul>
     </p>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
+
 </body>
 
 </html>
