--- a/views/list.html
+++ b/views/list.html
@@ -7,21 +7,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
-    <title>About Page</title>
+    <title>List Page</title>
 </head>
 
 <body>
-
     <nav class="nav">
         <a class="nav-link active" href="/">Home</a>
         <a class="nav-link active" href="/about">About</a>
         <a class="nav-link active" href="/contact">Contact</a>
         <a class="nav-link active" href="/list">List</a>
     </nav>
-    <h1>This is the About page</h1>
+
+    <p>
+        <ul>
+            <li>This</li>
+            <li>is</li>
+            <li>my</li>
+            <li>List Page</li>
+        </ul>
+    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
-
 </body>
 
 </html>
