--- a/views/blog.html
+++ b/views/blog.html
@@ -6,16 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
     <title>List Page</title>
 </head>
 
 <body>
-    <nav class="nav">
-        <a class="nav-link active" href="/">Home</a>
-        <a class="nav-link active" href="/about">About</a>
-        <a class="nav-link active" href="/contact">Contact</a>
-        <a class="nav-link active" href="/list">List</a>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/">Web Development and Design</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/blog">Blog</a></li>
+            </ul>
+        </div>
     </nav>
 
     <p>
@@ -23,7 +30,7 @@
             <li>This</li>
             <li>is</li>
             <li>my</li>
-            <li>List Page</li>
+            <li>Blog Page</li>
         </ul>
     </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
