working carousel, prepping for organization changes and want a return point if needed

--- a/views/favorites.html
+++ b/views/favorites.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/styles.css" />
-    <title>Contact</title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <title>Favorites</title>
 </head>
 
 <body>
@@ -16,17 +16,17 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">Web Development and Design</a>
+                <a class="navbar-brand" href="/">Hanging From Trees</a>
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="/favorites">Our Favorites</a></li>
+                <li><a href="/about">The Tribe</a></li>
                 <li><a href="/blog">Blog</a></li>
             </ul>
         </div>
     </nav>
-    <h1>This is the contact page</h1>
+    <h1>Favorite hammocks and accessories - Tried and True</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
 
