--- a/views/blog.html
+++ b/views/blog.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/styles.css" />
-    <title>List Page</title>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <title>Blog</title>
 </head>
 
 <body>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">Web Development and Design</a>
+                <a class="navbar-brand" href="/">Hanging From Trees</a>
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="/favorites">Our Favorites</a></li>
+                <li><a href="/about">The Tribe</a></li>
                 <li><a href="/blog">Blog</a></li>
             </ul>
         </div>
