working with bootstrap CDN before changing to materialize install

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,1 +1,18 @@
 @import 'header';
+
+.container {
+}
+
+.row {
+}
+
+.page-header {
+}
+
+li.dropdown {
+  margin: 5px;
+  padding: 0 5px;
+}
+.jumbotron {
+  
+}
