--- a/views/testing.html
+++ b/views/testing.html
@@ -1,5 +1,5 @@
 <!-- this page for testing purposes or temp keeping code snippets only -->
-
+<!--Original home page-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -94,3 +94,5 @@
 </body>
 
 </html>
+
+<!--next snippet-->
