--- a/views/about.html
+++ b/views/about.html
@@ -11,21 +11,27 @@
 </head>
 
 <body>
-
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">Hanging From Trees</a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="/favorites">Our Favorites</a></li>
-                <li><a href="/about">The Tribe</a></li>
-                <li><a href="/blog">Blog</a></li>
-            </ul>
+    <div class="container">
+        <div class="row">
+            <div class="header"></div>
         </div>
-    </nav>
-    <h1>Our tribe story. Wanna join our tribe?</h1>
+        <div class="row">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="/">Hanging From Trees</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/favorites">Our Favorites</a></li>
+                        <li><a href="/about">The Tribe</a></li>
+                        <li><a href="/blog">Blog</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <h1>Our tribe story. Wanna join our tribe?</h1>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
 
