--- a/views/favorites.html
+++ b/views/favorites.html
@@ -12,21 +12,49 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="header"></div>
+        </div>
+        <div class="row">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="/">Hanging From Trees</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li class="nav"><a href="/">Home</a></li>
+                        <li class="nav"><a href="/favorites">Our Favorites</a></li>
+                        <li class="nav"><a href="/about">The Tribe</a></li>
+                        <li class="nav"><a href="/blog">Blog</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="jumbotron">
+                    <h1>Hammocks and Stuff</br> <small>With the Tribe Stamp of Approval</small></h1>
+                    <p>The hammocks and accessories on this page have all been tested, slept in, camped with, and approved by
+                        the Tribe. These really are the favorites!</p>
+                </div>
 
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">Hanging From Trees</a>
             </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="/favorites">Our Favorites</a></li>
-                <li><a href="/about">The Tribe</a></li>
-                <li><a href="/blog">Blog</a></li>
+
+        </div>
+        <div class="col-lg-12">
+            <button>Best Places to Buy Hammocks</button>
+            <ul class="button">
+                <li class="dropdown"><a href="https://www.bearbuttteam.com/">Bear Butt Hammocks</a></li>
+                <li class="dropdown"><a href="https://www.tentsile.com/">Tentsile.com</a></li>
+                <li class="dropdown"><a href="https://www.eaglesnestoutfittersinc.com/">Eagle's Nest Outfitters</a></li>
+
             </ul>
         </div>
-    </nav>
-    <h1>Favorite hammocks and accessories - Tried and True</h1>
+    </div>
+
+    </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
 
