--- a/views/index.html
+++ b/views/index.html
@@ -13,78 +13,87 @@
 
 <body>
     <div class="container">
-        <div class="header"></div>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Hanging From Trees</a>
+        <div class="row">
+            <div class="header"></div>
+        </div>
+        <div class="row">
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="/">Hanging From Trees</a>
+                    </div>
+                    <ul class="nav navbar-nav">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/favorites">Our Favorites</a></li>
+                        <li><a href="/about">The Tribe</a></li>
+                        <li><a href="/blog">Blog</a></li>
+                    </ul>
                 </div>
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/favorites">Our Favorites</a></li>
-                    <li><a href="/about">The Tribe</a></li>
-                    <li><a href="/blog">Blog</a></li>
-                </ul>
-            </div>
-        </nav>
+            </nav>
+        </div>
+        <div class="row">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
 
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="/imgs/double-hammock-over-water.jpg" alt="Double Hammock">
+                        <div class="carousel-caption">
+                            <h3>Relaxing in a Double Hammock</h3>
+                            <p>Hammock over Troubled Water</p>
+                        </div>
+                    </div>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img src="/imgs/double-hammock-over-water.jpg" alt="Double Hammock">
-                    <div class="carousel-caption">
-                        <h3>Relaxing in a Double Hammock</h3>
-                        <p>Hammock over Troubled Water</p>
+                    <div class="item">
+                        <img src="/imgs/red-hammock-mtn-view.jpg" alt="Great View">
+                        <div class="carousel-caption">
+                            <h3>Outdoor Style</h3>
+                            <p>Room with a View</p>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="/imgs/sunset-two-hammocks.jpg" alt="Sunset in a Hammock">
+                        <div class="carousel-caption">
+                            <h3>Hammocks at Sunset</h3>
+                            <p>Sunrise, Sunset</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="item">
-                    <img src="/imgs/red-hammock-mtn-view.jpg" alt="Great View">
-                    <div class="carousel-caption">
-                        <h3>Outdoor Style</h3>
-                        <p>Room with a View</p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="/imgs/sunset-two-hammocks.jpg" alt="Sunset in a Hammock">
-                    <div class="carousel-caption">
-                        <h3>Hammocks at Sunset</h3>
-                        <p>Sunrise, Sunset</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+            </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
             <span class="sr-only">Next</span>
             </a>
+            </div>
         </div>
 
-
-        <div class="page-header">
-            <h1>Hanging From Trees </br><small>Living the Hammock Life</small></h1>
+        <div class="row">
+            <div class="page-header">
+                <h1>Hanging From Trees </br><small>Living the Hammock Life</small></h1>
+            </div>
         </div>
         <div class="row">
-            <div class="col-sm-4">.col-sm-4</div>
-            <div class="col-sm-4">.col-sm-4</div>
-            <div class="col-sm-4">.col-sm-4</div>
+            <div class="col-sm-4">image with links to other pages and some descriptive details</div>
+            <div class="col-sm-4">image with links to other pages and some descriptive details</div>
+            <div class="col-sm-4">image with links to other pages and some descriptive details</div>
         </div>
         <div class="row">
-
+            <div class="col-lg-12">
+                <p> next row starts here</p>
+                <p>paragraph content here</p>
+            </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
