--- a/views/test2.html
+++ b/views/test2.html
@@ -36,6 +36,7 @@
                     </li>
                     <li>
                         <img src="../imgs/red-hammock-mtn-view.jpg">
+
                         <div class="caption left-align">
                             <h3>Outdoor Style</h3>
                             <h5 class="light grey-text text-lighten-3">Room with a View</h5>
@@ -43,6 +44,7 @@
                     </li>
                     <li>
                         <img src="../imgs/sunset-two-hammocks.jpg">
+
                         <div class="caption right-align">
                             <h3>Sunrise, Sunset</h3>
                             <h5 class="light grey-text text-lighten-3">Hammocks at Sunset</h5>
@@ -50,50 +52,43 @@
                     </li>
                 </ul>
             </div>
-        </div>
-        <div class="row">
-            <h2 class="center">Living the Hammock Life</h2>
-        </div>
-        <div class="row">
-            <div class="col s4">
-                <div class="card-panel center "><img src='../imgs/hammock-waterfall.jpg' alt 'Hammocks and waterfalls'></a>
-                    <h4><a href="/favorites">Favorites</a></h4>
-                    <p class="flow-text ">Our tested and favorite hammocks and hammock-essentials we can't (or don't want) to do without.
-                    </p>
+            <div class="row">
+                <div class="col s4">
+                    <div class="card-panel "><img src='../imgs/hammock-waterfall.jpg' alt 'Hammocks and waterfalls'></a>
+                        <p class="flow-text ">consectetur adipiscing elit. Nullam sed elit dapibus, tincidunt magna ut,Lorem ipsum dolor sit ame
+                        </p>
+                    </div>
+                </div>
+                <div class="col s4 ">
+                    <div class="card-panel "><img src='../imgs/pine-tree-forest.jpg' alt 'Pine Tree Forest'></a>
+                        <p class="flow-text ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sed elit dapibus, tincidunt magna
+                            ut,
+                        </p>
+                    </div>
+                </div>
+                <div class="col s4 ">
+                    <div class="card-panel "><img src='../imgs/hammock-feet.jpg' alt 'Nothing Like Reading in a Hammock'></a>
+                        <p class="flow-text ">dolor sit amet, consectetur adipiscing elit. Nullam sed elit dapibus, tincidunt magna ut,
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="col s4 ">
-                <div class="card-panel center"><img src='../imgs/pine-tree-forest.jpg' alt 'Pine Tree Forest'></a>
-                    <h4><a href="/about">Our Tribe</a></h4>
-                    <p class="flow-text ">Learn how our Hammock obsession started and join the tribe.
-                    </p>
-                </div>
-            </div>
-            <div class="col s4 ">
-                <div class="card-panel center "><img src='../imgs/hammock-feet.jpg' alt 'Nothing Like Reading in a Hammock'></a>
-                    <h4><a href="/blog">Blog</a></h4>
-                    <p class="flow-text ">Wanna hear what we have to say? Then you might wanna see the blog page. By the way, #HammockFest2017
-                        is coming up, and you should definitely check that out.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <footer class="page-footer grey darken-4">
+
+            <footer class="page-footer">
                 <div class="container">
                     <div class="row">
                         <div class="col s12">
+
                             <div class="footer-copyright">Copyright &copy 2017 - Hanging from Trees &amp; Co. All Rights Reserved.
                             </div>
                         </div>
                     </div>
                 </div>
             </footer>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
+            <script type="text/javascript " src="../libs/materialize/dist/js/materialize.min.js "></script>
+            <script src="../javascript/jquery.js "></script>
         </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
-    <script type="text/javascript" src="../libs/materialize/dist/js/materialize.min.js"></script>
-    <script src="../javascript/jquery.js "></script>
 </body>
 
 </html>
