--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,41 +1,50 @@
 @import 'header';
 
 .container {
-<<<<<<< HEAD
   width: 90%;
 }
 nav {
-  background-color: #212121;
   padding: 0 35px;
+  border-radius: 6px;
   .nav-wrapper {
-    background-color: inherit;
+    border-radius: 6px;
   }
   .nav-mobile {
-    background-color: inherit;
   }
-}
-
-h1 {
-  color: #212121;
 }
 
 small {
   font-weight: 100;
 }
-=======
+.page-footer {
+  padding: 0 35px;
+  border-radius: 6px;
 }
-
-.row {
-}
-
-.page-header {
-}
-
-li.dropdown {
-  margin: 5px;
-  padding: 0 5px;
-}
-.jumbotron {
+img {
+  border-radius: 6px;
   
 }
->>>>>>> a0db20f62529ec708fd9276dffe30a8c920c17ac
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+header {
+  border-radius: 6px;
+}
+.slider {
+  border-radius: 6px;
+}
+.slides {
+  border-radius: 6px;
+}
+.col.s12 {
+  border-radius: 6px;
+}
+.card-panel {
+  border-radius: 4px;
+}
