--- a/views/about.html
+++ b/views/about.html
@@ -5,72 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/libs/materialize/dist/css/materialize.css">
+    <link rel="stylesheet" href="../libs/materialize/dist/css/materialize.css">
     <link rel="stylesheet" type="text/css" href="/css/styles.css" />
-    <link href="<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,500i,700,700i,900" rel="stylesheet">" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,500i,700,700i,900 ">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>Our Tribe</title>
 </head>
 
 <body>
     <div class="container">
         <div class="row">
-<<<<<<< HEAD
-            <div class="header">
-                <div class="row">
-                    <nav>
-                        <div class="nav-wrapper">
-                            <a href="/" class="brand-logo right">Hanging From Trees</a>
-                            <ul id="nav-mobile" class="left hide-on-med-and-down">
-                                <li><a href="/">Home</a></li>
-                                <li><a href="/favorites">Our Favorites</a></li>
-                                <li><a href="/about">The Tribe</a></li>
-                                <li><a href="/blog">Blog</a></li>
-                            </ul>
+            <nav class="grey darken-4">
+                <div class=" nav-wrapper ">
+                    <a href="/" class="brand-logo right "><img src="../imgs/trees.png"/></a>
+                    <ul id="nav-mobile " class="left hide-on-med-and-down ">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/favorites">Our Favorites</a></li>
+                        <li><a href="/about">The Tribe</a></li>
+                        <li><a href="/blog">Blog</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="row">
+            <footer class="page-footer grey darken-4">
+                <div class="container">
+                    <div class="row">
+                        <div class="col s12">
+
+                            <div class="footer-copyright">Copyright &copy 2017 - Hanging from Trees &amp; Co. All Rights Reserved.
+                            </div>
                         </div>
-                    </nav>
-
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <nav class="navbar navbar-inverse">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="/">Hanging From Trees</a>
                     </div>
-                    <ul class="nav navbar-nav">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/favorites">Our Favorites</a></li>
-                        <li><a href="/about">The Tribe</a></li>
-                        <li><a href="/blog">Blog</a></li>
-                    </ul>
                 </div>
-            </nav>
+            </footer>
         </div>
-=======
-            <div class="header"></div>
-        </div>
-        <div class="row">
-            <nav class="navbar navbar-inverse">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="/">Hanging From Trees</a>
-                    </div>
-                    <ul class="nav navbar-nav">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/favorites">Our Favorites</a></li>
-                        <li><a href="/about">The Tribe</a></li>
-                        <li><a href="/blog">Blog</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
->>>>>>> a0db20f62529ec708fd9276dffe30a8c920c17ac
-        <h1>Our tribe story. Wanna join our tribe?</h1>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
+    <script type="text/javascript " src="../libs/materialize/dist/js/materialize.min.js "></script>
+    <script src="../javascript/jquery.js "></script>
 </body>
 
 </html>
